--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
     margin:0;
     padding:0;
 }
-
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #EDF2F4;
+    background-color: #d6dbff;
 }
+
 .container {
     background-color: #DFE3F5;
     padding: 2rem;
@@ -72,4 +72,15 @@ form button {
     color:white;
     font-size: 1.15rem;
     cursor: pointer;
+    transition: transform 0.15s; /* Animation */
+}
+
+button:hover {
+    filter: grayscale(50%);
+    box-shadow: 0 0 5px 1.2px rgb(79, 80, 180);
+    background-color:rgb(92, 12, 190);
+}
+button:active {
+    background-color: darkgreen;
+    transform: scale(0.95) ;
 }
